# sagemaker-python-sdk

.github/workflows/: auto-bug-fix.yml
sagemaker-serve/docs/design/: ic-default-resource-derivation.md
sagemaker-serve/src/sagemaker/serve/: model_builder.py
sagemaker-serve/src/sagemaker/serve/utils/: __init__.py  ic_utils.py
sagemaker-serve/tests/integ/: test_ic_default_integration.py
sagemaker-serve/tests/unit/serve/: test_model_builder_ic_default.py
sagemaker-serve/tests/unit/serve/utils/: test_ic_utils.py
tools/auto-fix-bot/: README.md  pyproject.toml  requirements.txt
tools/auto-fix-bot/bot/: __init__.py  agent.py  codebase_explorer.py  config.py  guardrails.py  issue_parser.py  main.py  pr_creator.py  tools.py
tools/auto-fix-bot/bot/prompts/: fix_bug.md  pr_description.md  system.md
tools/auto-fix-bot/config/: config.yaml
tools/auto-fix-bot/docs/: design.md
tools/auto-fix-bot/tests/: conftest.py  test_guardrails.py  test_issue_parser.py  test_tools.py
