[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "sagemaker-bug-fix-bot"
dynamic = ["version"]
description = "Automated bug-fix bot for the SageMaker Python SDK"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
authors = [
  { name = "Amazon Web Services" },
]
dependencies = [
  "anthropic>=0.42.0",
  "boto3>=1.35.0",
  "PyGithub>=2.5.0",
  "pyyaml>=6.0",
  "pydantic>=2.10.0",
  "click>=8.1.0",
  "jinja2>=3.1.0",
  "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
  "black>=24.0.0",
  "flake8>=7.0.0",
  "pylint>=3.0.0",
  "isort>=5.13.0",
  "pre-commit>=3.6.0",
]

[project.scripts]
sagemaker-bot = "bot.main:main"

[project.urls]
Homepage = "https://github.com/aws/sagemaker-python-sdk"

[tool.setuptools.dynamic]
version = {file = "VERSION"}

[tool.setuptools.packages.find]
include = ["bot*"]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
addopts = ["-vv", "--tb=short"]
testpaths = ["tests"]
markers = [
  "unit: Unit tests (no external deps)",
  "integration: Integration tests (requires API keys)",
]

[tool.coverage.run]
source = ["bot"]
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 70
show_missing = true
